added jwt filter and global exception handling